--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 	<script src="https://use.fontawesome.com/b85dcf5277.js"></script>
 
+	<link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,600,700,800" rel="stylesheet">
+
 </head>
 <body>
 	<div class="container-fluid">
@@ -25,19 +27,63 @@
 	</div>
 
 	<div class="slide_nav">
-		<i class="fa fa-long-arrow-left" aria-hidden="true" on-click="changeSlide()" data-action="left"></i>
-		<i class="fa fa-long-arrow-right" aria-hidden="true" on-click="changeSlide()" data-action="right"></i>
+		<i class="fa fa-long-arrow-left" aria-hidden="true" data-action="left"></i>
+		<i class="fa fa-long-arrow-right" aria-hidden="true" data-action="right"></i>
 	</div>
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6">
-				<h3>Soulfuladventures.in</h3>
+			<div class="col-md-6" id="logo_div">
+				<img src="images/logo.png" height="100px">
+<!-- 				<h1>Soulfuladventures.in</h1>
+				<h2>h2. Bootstrap heading</h2>
+				<h3>h3. Bootstrap heading</h3>
+				<h4>h4. Bootstrap heading</h4>
+				<h5>h5. Bootstrap heading</h5>
+				<h6>h6. Bootstrap heading</h6> -->
 			</div>
 		</div>
 	</div>
+	
+	<div class="col-md-6 col-md-offset-3" style="position:absolute; top:40%; left:10px;color:#ffffff; font-size:20px; font-weight:600; letter-spacing: 2px;text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.76); text-align:center">
+		At Soulful Adventures, we believe that travelling is more than just the journey! It is finding that elusive connection with the destination you have always dreamed of visiting or returning to - one for which you carefully save up and set aside time.
+		<br>
+		<br>
+		<br>
+		<br>
+		<span style="font-size:16px; font-weight:400;">
+			<i class="fa fa-map-o" aria-hidden="true" title="Destination"></i> | Pondicherry 
+			- Pollachi 
+			- Thekkady
+		</span>
+
+		<br>
+		<br>
+		<span style="font-size:16px; font-weight:400;">
+			<i class="fa fa-image" aria-hidden="true" title="Activities"></i> | Cycling 
+			- Camping 
+			- Elephant Ride
+			- Village Trail
+		</span>
+	</div>
+
+	<div style="position:absolute; bottom:20px; right:30px;color:#ffffff; font-size:18px; font-weight:300; letter-spacing: 2px; text-align:right;">
+		<span style="border:2px solid #ffffff; border-radius:5px; padding:5px;"> * For more inquiry * </span>
+		<br>
+		<br>
+		 <i class="fa fa-phone" aria-hidden="true"></i>  +91 9790344 873
+		<br>
+		<i class="fa fa-envelope" aria-hidden="true"></i> soulfuladventuresindia@gmail.com
+	</div>
+	
+	<div style="position:absolute; bottom:20px; left:10px;color:#ffffff; font-size:32px; font-weight:300; letter-spacing: 2px;">
+		<i class="fa fa-globe" aria-hidden="true"></i> soulfuladventures.in
+	</div>
 
 	<style type="text/css">
+		body{
+			font-family: 'Raleway', sans-serif;
+		}
 		.background_slider_cont{
 			width: 100%;
 			height: 100%;
@@ -52,6 +98,10 @@
     		       -ms-transition: all .9s ease;
     		        -o-transition: all .9s ease;
     		           transition: all .9s ease;
+			
+			-moz-box-shadow: rgba(0, 0, 0, 0.8) 5px 5px 100px inset;
+			-webkit-box-shadow: rgba(0, 0, 0, 0.8) 5px 5px 100px inset;
+			 box-shadow: rgba(0, 0, 0, 0.8) 5px 5px 100px inset;
 		}
 		.slide_nav{
 			color:#ffffff;
@@ -66,14 +116,16 @@
 			background-color: rgba(0, 0, 0, 0.47);
     		padding: 2px 12px
 		}
+		#logo_div{
+			color: #ffffff;
+		}
 	</style>
 	
 	<script type="text/javascript">
 		var imageUrls = [
-			'http://wallpaper-gallery.net/images/best-forest-wallpaper/best-forest-wallpaper-26.jpg',
-			'http://wallpaper-gallery.net/images/wallpaper-forest/wallpaper-forest-10.jpg',
-			'https://images2.alphacoders.com/103/103560.jpg',
-			'http://www.obaasima.com/i/2017/02/best-nature-wallpaper-android.jpg',
+			'images/slide/54818_1600x1200-wallpaper-cb1340033515.jpg',
+			'images/slide/Equatorial-Forest.jpg',
+			'images/slide/ws_Nebula_Forest_Street_Foliage_1600x1200.jpg'
 		];
 
 		$(".background_slider_cont").css('background-image', 'url('+imageUrls[0]+')');
@@ -81,11 +133,12 @@
 		var currentImageId = 0;
 
 		$(".slide_nav i" ).click(function() {
+			// alert(currentImageId);
 			var action = $(this).data('action');
 			if(action == 'left'){
 				changeImageId = currentImageId-1;
 				if(changeImageId<0){
-					changeImageId = slideCount;
+					changeImageId = slideCount-1;
 				}
 			}else{
 				changeImageId = currentImageId+1;
@@ -94,6 +147,7 @@
 				}
 			}
 			currentImageId = changeImageId;
+			// alert(currentImageId);
 			$(".background_slider_cont").css('background-image', 'url('+imageUrls[changeImageId]+')');
 		});
 	</script>
