Updated destination and activities

--- a/index.html
+++ b/index.html
@@ -52,17 +52,24 @@
 		<br>
 		<br>
 		<span style="font-size:16px; font-weight:400;">
-			<i class="fa fa-map-o" aria-hidden="true" title="Destination"></i> | Pondicherry 
-			- Pollachi 
-			- Thekkady
+			<i class="fa fa-map-o" aria-hidden="true" title="Destination"></i> | Pondicherry
+			-Pollachi 
+			-Thattekkad
+			-Wayanad 
+			-Thekkady
+			-Chikmagalur
 		</span>
 
 		<br>
 		<br>
 		<span style="font-size:16px; font-weight:400;">
-			<i class="fa fa-image" aria-hidden="true" title="Activities"></i> | Cycling 
-			- Camping 
-			- Elephant Ride
+			<i class="fa fa-image" aria-hidden="true" title="Activities"></i> | Bird watching
+			- Tea tours
+			- Farm tours
+			- Trekking
+			- Cycling
+			- Camping tours
+			- Nature walk
 			- Village Trail
 		</span>
 	</div>
