--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="background_slider_cont" >
+			<div class="background_slider_front_cont" >
+			</div>
 		</div>
 	  </div>
 	</div>
@@ -45,7 +47,7 @@
 		</div>
 	</div>
 	
-	<div class="col-md-6 col-md-offset-3" style="position:absolute; top:40%; left:10px;color:#ffffff; font-size:20px; font-weight:600; letter-spacing: 2px;text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.76); text-align:center">
+	<div class="col-md-6 col-md-offset-3" style="position:absolute; top:30%; left:10px;color:#ffffff; font-size:20px; font-weight:600; letter-spacing: 2px;text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.76); text-align:center">
 		At Soulful Adventures, we believe that travelling is more than just the journey! It is finding that elusive connection with the destination you have always dreamed of visiting or returning to - one for which you carefully save up and set aside time.
 		<br>
 		<br>
@@ -91,6 +93,13 @@
 		body{
 			font-family: 'Raleway', sans-serif;
 		}
+		.background_slider_front_cont{
+			background-color:rgba(0, 0, 0, 0.70);
+			/*background:linear-gradient(141deg, rgba(15, 184, 44, 0.3) 0%, rgba(190, 219, 31, 0.3) 51%, rgba(168, 232, 44, 0.3) 75%);*/
+			width: 100%;
+			height: 100%;
+			position: relative;
+		}
 		.background_slider_cont{
 			width: 100%;
 			height: 100%;
@@ -130,9 +139,12 @@
 	
 	<script type="text/javascript">
 		var imageUrls = [
-			'images/slide/54818_1600x1200-wallpaper-cb1340033515.jpg',
-			'images/slide/Equatorial-Forest.jpg',
-			'images/slide/ws_Nebula_Forest_Street_Foliage_1600x1200.jpg'
+			'images/slide/Tree-House-Resort-.jpg',
+			'images/slide/tented_champs.jpg',
+			'images/slide/india_tea.jpg',
+			// 'images/slide/54818_1600x1200-wallpaper-cb1340033515.jpg',
+			// 'images/slide/Equatorial-Forest.jpg',
+			// 'images/slide/ws_Nebula_Forest_Street_Foliage_1600x1200.jpg'
 		];
 
 		$(".background_slider_cont").css('background-image', 'url('+imageUrls[0]+')');
